--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,7 +11,6 @@ Vagrant.configure("2") do |config|
       vb.cpus = 4
       vb.gui = false
       vb.memory = "4096"
-   
      end  
     end
    config.vm.define "worker" do |worker|  
@@ -34,5 +33,15 @@ Vagrant.configure("2") do |config|
       vb.memory = "1024"
      end
    end
-   end
+   config.vm.define "ansible" do |ansible|
+    ansible.vm.box = "bento/ubuntu-22.04"
+    ansible.vm.hostname = "ansible"
+    ansible.vm.network "private_network", ip: "192.168.56.18"
+    ansible.vm.provider "virtualbox" do |vb|
+      vb.cpus = 1
+      vb.gui = false
+      vb.memory = "1024"
+     end
+    end
+  end
    
