--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,6 +1,5 @@
 [master]
-master ansible_host=192.168.56.15 ansible_user=root ansible_ssh_private_key_file=/home/alex/keys/master
+master ansible_host=192.168.56.15 ansible_user=vagrant ansible_connection=local
 
 [worker]
-worker1 ansible_host=192.168.56.16 ansible_user=root ansible_ssh_private_key_file=/home/alex/keys/worker
-worker2 ansible_host=192.168.56.17 ansible_user=root ansible_ssh_private_key_file=/home/alex/keys/worker2
+worker1 ansible_host=192.168.56.16 ansible_user=vagrant 
