--- a/ansible/roles/k3s/tasks/workers.yml
+++ b/ansible/roles/k3s/tasks/workers.yml
@@ -1,4 +1,11 @@
 ---
+- name: Check if K3s agent is already installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/k3s  
+  register: k3s_installed
+  become: true
+
 - name: Install K3s on worker nodes
+  when: not k3s_installed.stat.exists  
   ansible.builtin.shell: |
     curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.15:6443 K3S_TOKEN={{ hostvars['master']['k3s_token'].stdout }} sh -
