--- a/ansible/roles/longhorn/tasks/main.yml
+++ b/ansible/roles/longhorn/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
-# tasks file for longhorn
+- name: Add a longhorn repository
+  kubernetes.core.helm_repository:
+    name: longhorn 
+    repo_url: https://charts.longhorn.io
+
+- name: Install longhorn chart
+  kubernetes.core.helm:
+      name: longhorn
+      namespace: longhorn-system
+      chart_ref: longhorn/longhorn
