--- a/ansible/roles/k3s/tasks/master.yml
+++ b/ansible/roles/k3s/tasks/master.yml
@@ -15,17 +15,32 @@
   register: k3s_token
   become: true
 
-- name: Check if helm is already installed
-  ansible.builtin.stat:
-    path: /usr/local/bin/helm
-  register: helm_installed
+- name: Install curl (if not already installed)
+  package:
+    name: curl
+    state: present
+
+- name: Download Helm installation script
+  get_url:
+    url: https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+    dest: /tmp/get_helm.sh
+    mode: '0755'
   become: true
 
-- name: Install helm
-  when: not helm_installed.stat.exists  
-  ansible.builtin.apt:
-    name: helm
-    state: present
+- name: Run Helm installation script
+  command: /tmp/get_helm.sh
+  args:
+    creates: /usr/local/bin/helm
+  register: helm_install_result
+  changed_when: false
+  become: true
+
+- name: Add /usr/local/bin to PATH
+  lineinfile:
+    path: ~/.bashrc
+    line: 'export PATH=$PATH:/usr/local/bin'
+  when: helm_install_result.rc == 0
+  become: true
 
 - name: Read kubeconfig file
   shell: cat /etc/rancher/k3s/k3s.yaml
