--- a/ansible/roles/longhorn/tasks/main.yml
+++ b/ansible/roles/longhorn/tasks/main.yml
@@ -1,11 +1,21 @@
 ---
-- name: Add a longhorn repository
+- name: Add a Longhorn repository
   kubernetes.core.helm_repository:
-    name: longhorn 
+    name: longhorn
     repo_url: https://charts.longhorn.io
+    kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
 
-- name: Install longhorn chart
+- name: Install Longhorn chart
   kubernetes.core.helm:
-      name: longhorn
-      namespace: longhorn-system
-      chart_ref: longhorn/longhorn
+    name: longhorn
+    namespace: longhorn-system
+    chart_ref: longhorn/longhorn
+    state: present
+    create_namespace: true  # Создать пространство имен, если оно не существует
+    values: 
+      # Добавьте любые необходимые значения конфигурации для Helm chart
+      # Например:
+      # persistence:
+      #   storageClass: "default"
+    kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
+  become: true
