--- a/ansible/roles/longhorn/tasks/main.yml
+++ b/ansible/roles/longhorn/tasks/main.yml
@@ -4,6 +4,7 @@
     name: longhorn
     repo_url: https://charts.longhorn.io
     kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
+  become: true
 
 - name: Install Longhorn chart
   kubernetes.core.helm:
