--- a/ansible/roles/longhorn/tasks/main.yml
+++ b/ansible/roles/longhorn/tasks/main.yml
@@ -1,22 +1,18 @@
 ---
 - name: Add a Longhorn repository
+  become: true
   kubernetes.core.helm_repository:
     name: longhorn
     repo_url: https://charts.longhorn.io
     kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
-  become: true
 
 - name: Install Longhorn chart
+  become: true
   kubernetes.core.helm:
     name: longhorn
     namespace: longhorn-system
     chart_ref: longhorn/longhorn
     state: present
     create_namespace: true  # Создать пространство имен, если оно не существует
-    values: 
-      # Добавьте любые необходимые значения конфигурации для Helm chart
-      # Например:
-      # persistence:
-      #   storageClass: "default"
     kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
-  become: true
+    become_user: root
