--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,5 +1,5 @@
 [master]
-master ansible_host=192.168.56.15 ansible_user=vagrant ansible_connection=local
+master ansible_host=192.168.56.15 ansible_user=root ansible_connection=local
 
 [worker]
 worker1 ansible_host=192.168.56.16 ansible_user=vagrant 
