--- a/ansible/roles/longhorn/tasks/main.yml
+++ b/ansible/roles/longhorn/tasks/main.yml
@@ -16,8 +16,14 @@
     create_namespace: true  # Создать пространство имен, если оно не существует
     kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
 
-- name: Apply the Kubernetes manifest
+- name: Apply storage class  manifest
   kubernetes.core.k8s:
     state: present
     src: "/root/k3s/ansible/roles/longhorn/files/storageClass.yml"
+    kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
+
+- name: Apply ingress manifest
+  kubernetes.core.k8s:
+    state: present
+    src: "/root/k3s/ansible/roles/longhorn/files/ingress.yml"
     kubeconfig: /etc/rancher/k3s/k3s.yaml  # Указываем путь к kubeconfig
