--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,4 +2,4 @@
 master ansible_host=192.168.56.15 ansible_user=root ansible_connection=local
 
 [worker]
-worker1 ansible_host=192.168.56.16 ansible_user=vagrant 
+worker1 ansible_host=192.168.56.16 ansible_user=root 
