--- a/ansible/roles/k3s/tasks/master.yml
+++ b/ansible/roles/k3s/tasks/master.yml
@@ -1,4 +1,16 @@
 ---
+- name: Install pip
+  ansible.builtin.apt:
+    name: python3-pip
+    state: present
+
+- name: install pre-requisites
+  pip:
+    name:
+      - openshift
+      - pyyaml
+      - kubernetes 
+
 - name: Check if K3s is already installed
   ansible.builtin.stat:
     path: /usr/local/bin/k3s  
