--- a/ansible/roles/k3s/tasks/workers.yml
+++ b/ansible/roles/k3s/tasks/workers.yml
@@ -8,4 +8,4 @@
 - name: Install K3s on worker nodes
   when: not k3s_installed.stat.exists  
   ansible.builtin.shell: |
-    curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.15:6443 K3S_TOKEN={{ hostvars['master']['k3s_token'].stdout }} sh -
+    curl -sfL https://get.k3s.io | K3S_URL=https://192.168.56.15:6443 K3S_TOKEN={{ hostvars['master']['k3s_token'].stdout }} INSTALL_K3S_EXEC='--node-ip=192.168.56.16 --flannel-iface=eth1' sh -
