--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure("2") do |config|
    master.vm.box = "bento/ubuntu-22.04"
    master.vm.hostname = "master"
    master.vm.network "private_network", ip: "192.168.56.15"
+   master.vm.provision :shell, path: "bootstrap.sh"
    master.vm.provider "virtualbox" do |vb|
     vb.cpus = 4
     vb.gui = false
@@ -22,5 +23,15 @@ Vagrant.configure("2") do |config|
     vb.memory = "1024"
    end
   end
+  config.vm.define "worker2" do |worker1|
+    worker1.vm.box = "bento/ubuntu-22.04"
+    worker1.vm.hostname = "worker1"
+    worker1.vm.network "private_network", ip: "192.168.56.17"
+    worker1.vm.provider "virtualbox" do |vb|
+      vb.cpus = 1
+      vb.gui = false
+      vb.memory = "1024"
+     end
+    end
  end
  
